2004-08-17  Dossy Shiobara <dossy@panoptic.com>

	* nsd/fastpath.c (1.18.2.2): Minor change to eliminate Win32
	  compile-time warning.  Closes SF Bug #696806.  Backported from
	  HEAD.

2004-08-14  Dossy Shiobara <dossy@panoptic.com>

	* aclocal.m4 (1.1.4.2), configure (1.15.2.3), nsd/dns.c (1.7.2.2):
	  Solaris 7 uses gethostbyaddr_r(), and the autoconf and GetHost()
	  versions didn't work.  Fixed now.  Backported from HEAD.

2004-08-14  Dossy Shiobara <dossy@panoptic.com>

	* nsd/dns.c (1.7.2.1), aclocal.m4 (1.1.4.1), configure.in
	  (1.13.2.2), configure (1.15.2.2): gethostbyaddr() and
	  gethostbyname() are not thread-safe.	Use the new getaddrinfo()
	  and getnameinfo() API where available, otherwise use
	  gethostbyaddr_r() and gethostbyname_r() if available.  Otherwise,
	  continue to use the non-safe versions but emit a warning at
	  configure time.  Fixes SF Bug #1008721.  Backported from HEAD.

2004-08-13  Dossy Shiobara <dossy@panoptic.com>

	* win32/: nscgi/nscgi.dsp (1.5.2.1), nscp/nscp.dsp (1.5.2.1),
	  nsd/nsd.dsp (1.14.2.1), nsdb/nsdb.dsp (1.1.2.1), nslog/nslog.dsp
	  (1.5.2.1), nsperm/nsperm.dsp (1.5.2.1), nssock/nssock.dsp
	  (1.8.2.1), nsthread/nsthread.dsp (1.7.2.1),
	  threadtest/threadtest.dsp (1.5.2.1): Change Win32 .dsp files to
	  reflect change in Tcl from "tcl84td.lib" to "tcl84tg.lib".  Fixes
	  SF Bug #996342.  Backported from HEAD.

2004-08-13  Dossy Shiobara <dossy@panoptic.com>

	* nsd/tclmisc.c (1.30.2.1): ns_hrefs is now more robust.  Fixes SF
	  Bug #995078.	Backported from HEAD.

2004-08-11  Dossy Shiobara <dossy@panoptic.com>

	* nsd/nsconf.c (1.32.2.3): Inability to resolve nsconf.hostname to
	  set nsconf.address is no longer fatal, and instead defaults to
	  "0.0.0.0".  Fixes SF Bug #994072.  Backported from HEAD.

2004-08-11  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.17.2.7): Fixed crash bug when virtual servers are
	  configured, but the "hostname" parameter didn't match any of the